# tdd-goat

./: .gitignore  .pylintrc  pyproject.toml  requirements.txt
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf
functional_test/: tests.py
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py
lists/: tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
lists/templates/: base.html  home.html  list.html
lists/templates/lists/: home.html  list.html
lists/tests/: test_all.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
test/: functional_tests.py
