[tool.poetry]
name = "tdd-goat"
version = "0.1.0"
description = ""
authors = ["nconnel4 <nconnel4@hotmail.com>"]
readme = "README.md"
packages = [{include = "tdd_goat"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "<1.12"
selenium = "<4"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
