[tool.poetry]
name = "tdd-goat"
version = "0.1.0"
description = ""
authors = ["nconnel4 <nconnel4@hotmail.com>"]
readme = "README.md"
packages = [{include = "tdd_goat"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "<1.12"
selenium = "<4"
gunicorn = "^20.1.0"
fabric3 = "^1.14.post1"


[tool.poetry.group.dev.dependencies]
django-types = "^0.16.0"
black = "^23.1.0"
redgreenunittest = "^0.1.1"
django-stubs = {extras = ["compatible-mypy"], version = "^1.16.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "superlist.settings"
